--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   </section>
   <footer class="center bg-dark">
     <p>Copyright &copy; 2019<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, Lasosta Coffee. All Rights Reserved</p> <br>
-    Designed by <a href="https://www.bekbracedesign.com" style="color:rgb(172, 171, 171); text-decoration: none; font-weight:bolder"; >  &copy; Bek Brace Design  </a>
+    Designed by <a href="https://www.bekbrace.com" style="color:rgb(172, 171, 171); text-decoration: none; font-weight:bolder"; >  &copy; Bek Brace</a>
   </footer>
   <script
       src="https://kit.fontawesome.com/6593404687.js"
